@@ -63,10 +63,10 @@ allprojects {
                     "--add-opens=java.base/java.nio=ALL-UNNAMED",
                     "--add-opens=java.base/java.math=ALL-UNNAMED",
                     "--add-opens=java.base/java.util=ALL-UNNAMED",
+                    "--add-opens=java.base/java.time=ALL-UNNAMED",
                     "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
                     "--add-opens=java.base/sun.security.x509=ALL-UNNAMED",
                     "-Dio.netty.tryReflectionSetAccessible=true",
-                    "-Djava.util.logging.config.file=${project.rootDir}/config/java.util.logging.properties",
                     "-XX:+HeapDumpOnOutOfMemoryError"]
 
         systemProperty 'jraft.available_processors', 1
